# openvibe

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md
.github/workflows/: ci.yml
docs/: CLAUDE-CODE-INSTRUCTIONS.md  INTENT.md  PRODUCT-REASONING.md
docs/research/: R1-THREAD-MODEL.md  SYNTHESIS.md
docs/research/phase-1.5/: AGENT-DEFINITION-MODEL.md  BACKEND-MINIMUM-SCOPE.md  BDD-IMPLEMENTATION-PLAN.md  FRONTEND-ARCHITECTURE.md  MVP-DESIGN-SYNTHESIS.md  THREAD-UX-PROPOSAL.md
v2/docs/: THESIS.md
v3/docs/: THESIS.md
v3/vibe-ai-adoption/: .env.example  PROGRESS.md  pyproject.toml  smoke_e2e.py
v3/vibe-ai-adoption/docs/: DESIGN.md  OPERATOR-DESIGN.md  OPERATOR-PATTERN.md
v3/vibe-ai-adoption/docs/plans/: 2026-02-15-vibe-ai-ops.md
v3/vibe-ai-adoption/src/vibe_ai_ops/: cli.py  main.py
v3/vibe-ai-adoption/src/vibe_ai_ops/crews/: base.py
v3/vibe-ai-adoption/src/vibe_ai_ops/crews/marketing/: m3_content_generation.py  validation_agents.py
v3/vibe-ai-adoption/src/vibe_ai_ops/crews/sales/: s1_lead_qualification.py
v3/vibe-ai-adoption/src/vibe_ai_ops/graphs/: checkpointer.py
v3/vibe-ai-adoption/src/vibe_ai_ops/graphs/marketing/: content_pipeline.py  m3_content_generation.py
v3/vibe-ai-adoption/src/vibe_ai_ops/graphs/sales/: s5_nurture_sequence.py
v3/vibe-ai-adoption/src/vibe_ai_ops/operators/: company_intel.py
v3/vibe-ai-adoption/src/vibe_ai_ops/operators/company_intel/: state.py
v3/vibe-ai-adoption/src/vibe_ai_ops/operators/company_intel/workflows/: research.py
v3/vibe-ai-adoption/src/vibe_ai_ops/operators/content_engine/workflows/: message_testing.py  repurposing.py
v3/vibe-ai-adoption/src/vibe_ai_ops/operators/customer_success/: __init__.py  state.py
v3/vibe-ai-adoption/src/vibe_ai_ops/operators/customer_success/workflows/: expansion_scan.py  health_monitoring.py  onboarding.py
v3/vibe-ai-adoption/src/vibe_ai_ops/operators/market_intel/: __init__.py
v3/vibe-ai-adoption/src/vibe_ai_ops/operators/market_intel/workflows/: deal_risk_forecast.py
v3/vibe-ai-adoption/src/vibe_ai_ops/operators/revenue_ops/workflows/: deal_support.py  lead_qualification.py  nurture_sequence.py
v3/vibe-ai-adoption/src/vibe_ai_ops/shared/: claude_client.py  config.py  hubspot_client.py  models.py  slack_client.py
v3/vibe-ai-adoption/src/vibe_ai_ops/temporal/activities/: agent_activity.py
v3/vibe-ai-adoption/src/vibe_ai_ops/temporal/workflows/: nurture_workflow.py
v3/vibe-ai-adoption/tests/: test_cli.py  test_integration.py  test_main.py
v3/vibe-ai-adoption/tests/crews/: test_base.py
v3/vibe-ai-adoption/tests/crews/marketing/: test_m3_crew.py  test_validation_agents.py
v3/vibe-ai-adoption/tests/crews/sales/: test_s1_crew.py
v3/vibe-ai-adoption/tests/graphs/: test_checkpointer.py
v3/vibe-ai-adoption/tests/graphs/marketing/: test_content_pipeline.py  test_m3_graph.py
v3/vibe-ai-adoption/tests/graphs/sales/: test_s5_nurture.py
v3/vibe-ai-adoption/tests/operators/: test_base.py
v3/vibe-ai-adoption/tests/operators/market_intel/: test_market_intel.py
v3/vibe-ai-adoption/tests/operators/revenue_ops/: test_nurture_sequence.py
v3/vibe-ai-adoption/tests/shared/: test_claude_client.py  test_config.py  test_hubspot_client.py  test_logger.py  test_operator_models.py
v3/vibe-ai-adoption/tests/temporal/: test_nurture_workflow.py
v4/docs/: DESIGN-PRINCIPLES.md  DESIGN.md  THESIS.md
v4/docs/notes/: 2026-02-18-icp-research.md
v4/docs/plans/: 2026-02-17-operator-sdk-design.md  2026-02-17-sdk-4-layer-architecture.md  2026-02-17-sdk-v2-implementation.md  (+4 more)
v4/openvibe-runtime/: pyproject.toml
v4/vibe-ai-adoption/: .env.example  PROGRESS.md  docker-compose.yml  smoke_e2e.py
v5/docs/: DESIGN.md  ROADMAP.md  THESIS.md
v5/openvibe-platform/: pyproject.toml
v5/openvibe-platform/config/: tenants.yaml
v5/openvibe-platform/src/openvibe_platform/: __init__.py  app.py  human_loop.py  memory_store.py  store.py  tenant.py
v5/openvibe-platform/src/openvibe_platform/routers/: approvals.py  deliverables.py  roles.py
v5/openvibe-platform/tests/: test_api_approvals.py  test_api_deliverables.py  test_api_roles.py  test_api_workspaces.py  test_init.py  test_memory_store.py  test_routers_tenants.py  test_store.py  test_tenant.py
v5/openvibe-runtime/: pyproject.toml
v5/openvibe-runtime/src/openvibe_runtime/: __init__.py
v5/openvibe-runtime/tests/: test_init.py
v5/vibe-inc/: .env.example  pyproject.toml
(+179 files in other folders)
