[project]
name = "vibe-ai-ops"
version = "0.1.0"
description = "20 AI agents powering Vibe's GTM"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "slack-sdk>=3.27.0",
    "hubspot-api-client>=9.0.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
