[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openvibe-platform"
version = "1.0.0"
description = "Deployed platform layer for openvibe — workspace, gateway, human loop"
requires-python = ">=3.12"
dependencies = [
    "openvibe-sdk>=1.0.0",
    "openvibe-runtime>=1.0.0",
    "fastapi>=0.115.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "httpx>=0.27",
]
serve = [
    "uvicorn>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openvibe_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../openvibe-sdk/src", "../openvibe-runtime/src"]
